--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "clean": "rimraf lib dist",
     "build": "npm run build:commonjs && npm run build:umd && npm run build:umd:min",
     "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib --presets es2015 --plugins transform-object-rest-spread,transform-async-to-generator,transform-runtime,transform-function-bind",
-    "build:umd": "mkdirp dist && cross-env BABEL_ENV=browserify NODE_ENV=development browserify src/browser.js -s WebSockHop -o dist/websockhop.js -t [ babelify --presets [ es2015 ] --plugins [ transform-object-rest-spread transform-async-to-generator transform-runtime transform-function-bind transform-inline-environment-variables ] ]",
+    "build:umd": "mkdirp dist && cross-env BABEL_ENV=browserify NODE_ENV=development browserify src/browser.js -s WebSockHop -t [ babelify --presets [ es2015 ] --plugins [ transform-object-rest-spread transform-async-to-generator transform-runtime transform-function-bind transform-inline-environment-variables ] ] -d | exorcist dist/websockhop.js.map > dist/websockhop.js",
     "build:umd:min": "mkdirp dist && cross-env BABEL_ENV=browserify NODE_ENV=production browserify src/browser.js -s WebSockHop -o dist/websockhop.min.js -t [ babelify --presets [ es2015 ] --plugins [ transform-object-rest-spread transform-async-to-generator transform-runtime transform-function-bind transform-inline-environment-variables ] ] -p [ minifyify --no-map ]",
     "check:src": "npm run lint",
     "lint": "eslint src",
@@ -48,6 +48,7 @@
     "browserify": "^13.0.1",
     "cross-env": "^1.0.7",
     "eslint": "^2.10.2",
+    "exorcist": "^0.4.0",
     "minifyify": "^7.3.3",
     "mkdirp": "^0.5.1",
     "rimraf": "^2.5.2"
