--- a/examples/echo/package.json
+++ b/examples/echo/package.json
@@ -7,7 +7,7 @@
     "engine.io-as-websocket": "^1.0.0",
     "express": "^3.3.0",
     "sockjs": "^0.3.0",
-    "websockhop": "^2.2.2",
+    "websockhop": "file:../../",
     "ws": "^1.1.0"
   }
 }
